# backend/app.js
@@ -17,6 +17,7 @@ const authRoute = require('./routes/auth-routes');
 const productRoute = require('./routes/product-routes');
 const addressRoute = require('./routes/address-routes');
 const cartRoute = require('./routes/cart-routes');
+const orderRoute = require('./routes/order-routes');
 
 app.use(cors());
 app.use(express.json());
@@ -35,6 +36,7 @@ app.use('/uploads',express.static('uploads'));
 app.use('/auth',authRoute);
 app.use('/product',productRoute);
 app.use('/cart',cartRoute);
+app.use('/order',orderRoute);
 app.use('/address',addressRoute);
 
 // swaggerSetup(app);
